# hpc

./: Makefile  README.md  file2.txt  imp.c  pro.c  ref.c  ty_script
explicit/: Makefile  exp.c  exp_hdf5.c
hw3/: Makefile  blac_matmult.c  bmatmult.c  dgemm.c  jobscript  matmult.c
hw5/: gmon.out  jobscript
hw5/ex-01-file/: myprog
hw5/ex-02-dataset/: SDS.h5  h5_crtdat
hw5/ex-03-rw/: SDS.h5  h5_rdwt
hw5/ex-04-group/: h5_crtgrp
hw5/ex-05-rw-group/: a.out  b.out  callgrind.out.256409  callgrind.out.277261  group.h5  h5_crtdat_ingrp.c  h5_wrgrp.c  test.c
hw5/test/: test.c  test.out
hw6/1pro/: Makefile  hw61.c  ty_script
hw6/2pro/: Makefile  hw62.c  ty_script
hw7/main/: CMakeLists.txt
hw7/pro4/: CMakeLists.txt  pro4.cpp
hw7/pro5/: CMakeLists.txt  pro5.cpp
hw7/pro6/: pro6.cpp
implicit/: Makefile
practice/compile/: jobscript  mylog  simple.c  simple2  simple2_avx512  simple2_no_vec  simple2_zmm_hi
practice/petsc/ex1-demo/: Makefile  ex1.out  jobscript  mylog  run_script.sh
practice/petsc/ex2-basics/: Makefile  ex2.out  jobscript  mylog
practice/petsc/ex3-vec-viewer/: Makefile  ex3.out  jobscript  mylog
practice/petsc/ex4-mat/: Makefile
practice/petsc/ex5-ksp/: 3693608-petsc.out  3732538-petsc.out  Makefile  ex5.c  ex5.out  jobscript  mylog  ty_script
